# UAB-LP-2024

eF-A-LP-Biblioteca/: CMakeLists.txt
eF-A-LP-Biblioteca/include/emprestimo/: emprestimo.h  emprestimo_dao.h
eF-A-LP-Biblioteca/include/livro/: livro.h  livro_dao.h
eF-A-LP-Biblioteca/include/relatorio/: relatorio.h
eF-A-LP-Biblioteca/include/utilizador/: utilizador.h  utilizador_dao.h
eF-A-LP-Biblioteca/src/: main.c
eF-A-LP-Biblioteca/src/emprestimo/: emprestimo.c  emprestimo_dao.c
eF-A-LP-Biblioteca/src/livro/: livro.c  livro_dao.c
eF-A-LP-Biblioteca/src/relatorio/: relatorio.c
eF-A-LP-Biblioteca/src/utilizador/: utilizador.c  utilizador_dao.c
eF-A-LP-Biblioteca/tests/: CMakeLists.txt  test_sistema.c
eF-A-LP-Biblioteca/tests/emprestimo/: test_emprestimo.c  test_emprestimo_dao.c
eF-A-LP-Biblioteca/tests/livro/: test_livro.c  test_livro_dao.c
eF-A-LP-Biblioteca/tests/relatorio/: test_relatorio.c
eF-A-LP-Biblioteca/tests/util/unity/: unity.c  unity.h
eF-A-LP-Biblioteca/tests/utilizador/: test_utilizador.c  test_utilizador_dao.c
eF-A-SO/: CMakeLists.txt  fup.c  relatorio.docx
eF-B-AC/: 21010-2304335eFolioB-AlineaA.txt  21010-2304335eFolioB-AlineaB.txt  21010-2304335eFolioB-AlineaC.txt  21010-2304335eFolioB-AlineaD-A.txt  21010-2304335eFolioB-AlineaD-B.txt
eF-B-IP/: CMakeLists.txt
eF-B-IP-Teste/: CMakeLists.txt
eF-B-IP-Teste/src/: RegistoSensor.c  RegistoSensor.h  TipoVeiculo.c  TipoVeiculo.h  main.c
eF-B-IP/src/: 2304335A.c  2304335B.c  2304335C.c  colmeia.c  colmeia2.c  tester.c
eF-B-IP/src/test_fixtures/input/: test10_input.txt  test1_input.txt  test2_input.txt  test3_input.txt  test4_input.txt  test5_input.txt  test6_input.txt  test7_input.txt  test8_input.txt  test9_input.txt
eF-B-IP/src/test_fixtures/output_actual/: test10_actual.txt  test1_actual.txt  test2_actual.txt  test3_actual.txt  test4_actual.txt  test5_actual.txt  test6_actual.txt  test7_actual.txt  test8_actual.txt  test9_actual.txt
eF-B-IP/src/test_fixtures/output_expected/: test10_expected.txt  test1_expected.txt  test2_expected.txt  test3_expected.txt  test4_expected.txt  test5_expected.txt  test6_expected.txt  test7_expected.txt  test8_expected.txt  test9_expected.txt
eF-B-LP-MundoRetangulos/: CMakeLists.txt
eF-B-LP-MundoRetangulos/src/: mundoRetangulos.c  mundoRetangulos.h
eF-B-LP-MundoRetangulos/tests/: CMakeLists.txt  testMundoRetangulos.c
eF-B-LP-MundoRetangulos/tests/unity/: unity_internals.h
eF-B-SO-mtxor/: CmakeLists.txt
eF-B-SO-mtxor/src/: mtxor.c
p01-OlaMundo/: CMakeLists.txt  OlaMundo.c
p02-Variaveis/: CMakeLists.txt  Variaveis.c
p02.1-Troca/: CMakeLists.txt
p02.2-Troca/: Troca.c
p02.3-SizeOf/: CMakeLists.txt  SizeOf.c
